--- a/chap-implementation.tex
+++ b/chap-implementation.tex
@@ -86,9 +86,9 @@ In order to maintain temporal coherence, the points are not written into a singl
 
 Now a compute shader is used to render the points. For each VPL, one work group reads through the respective partition of the point buffer and performs the transformation and culling against the VPL for each point. It then uses \texttt{imageAtomicMin} to ``render'' the point with correct depth testing as a single pixel into the respective ISM. Since atomic operations require using single channel integer textures, it is not possible to use a second or third channel for additional attributes. Instead, one 32 bit channel is used, with 24 bits containing the depth, and 8 bits containing the radius. Since the depth is in the 24 more significant bits, the depth test still works correctly. Another version that used a 3D texture for additionally storing the normal was implemented as well, see the next subsection.
 
-As an optimization, the compute shader renders each point into several ISMs. To this end, each work group reads the data of a fixed number of VPLs (e.\,g.\ 16) into shared memory. Then, while rendering the points, the culling is performed per point on all 16 VPLs, and those VPLs where the point passes the culling test are collected into a local array. Thereafter, the point is transformed for each of the collected VPLs and rendered into the respective ISM.
+As an optimization, the compute shader renders each point into several ISMs. To this end, each work group reads the data of a fixed number of VPLs (e.\,g., 16) into shared memory. Then, while rendering the points, the culling is performed per point on all 16 VPLs, and those VPLs where the point passes the culling test are collected into a local array. Thereafter, the point is transformed for each of the collected VPLs and rendered into the respective ISM.
 
-% In practice it turned out to be more efficient to limit the number of slots in the local array to a constant maximum (e.\,g.\ 4), possibly because this ensures that the rendering loop is not diverging and enables compiler optimizations like loop unrolling.
+% In practice it turned out to be more efficient to limit the number of slots in the local array to a constant maximum (e.\,g., 4), possibly because this ensures that the rendering loop is not diverging and enables compiler optimizations like loop unrolling.
 
 An attempt to do this optimization in the splat renderer by emitting multiple vertices in the geometry shader resulted in a significant performance hit, see \Cref{sec:results:ism:performance}.
 
@@ -106,7 +106,7 @@ If two threads with differing depth values simultaneously write into the depth b
 
 This solution had little cost (0.08\,ms), but fixes the race condition only inside one work group and not between work groups, for which no efficient synchronization primitives exist on the GPU. On a NVIDIA GTX 750 Ti, the race condition was still observable but acceptable. Interestingly, on a GTX 980, the race condition seemed to not occur at all with the described workaround.
 
-\citet{Günther:2013:AcceleratedPointCloudRendering} propose to double the texture size of the depth buffer and use each second texel as lock with the help of OpenCL's \texttt{atomic\_cmpxchg} function (\texttt{atomicCompSwap} in GLSL) to write both depth and additional attributes without race conditions. A more elaborate solution that might open  more optimization opportunities would involve a more advanced software renderer, e.\,g.\ following the approaches of \citet{Laine:2011:SoftwareRasterization}.
+\citet{Günther:2013:AcceleratedPointCloudRendering} propose to double the texture size of the depth buffer and use each second texel as lock with the help of OpenCL's \texttt{atomic\_cmpxchg} function (\texttt{atomicCompSwap} in GLSL) to write both depth and additional attributes without race conditions. A more elaborate solution that might open  more optimization opportunities would involve a more advanced software renderer, e.\,g., following the approaches of \citet{Laine:2011:SoftwareRasterization}.
 
 
 \subsection{Pull-Push Postprocessing}
@@ -178,11 +178,11 @@ The light lists are stored in a 2D texture with a height of the maximum amount o
 
 \begin{figure}[h]
     \includegraphics[width=\textwidth]{graphics/light_lists}
-    \caption{A visualization of the light lists texture. Each pixel row contains the light list of one cluster. The lists are divided into 16 partitions, one for each pixel in an interleaving block. Each red pixel represents an index to an VPL, a brighter red is a higher index. White pixels contain no data. The first value in each partition is the number of lights in that partition, therefore the dark line in front of the partitions.}
+    \caption{Visualization of the light lists texture. Each pixel row contains the light list of one cluster. The lists are divided into 16 partitions, one for each pixel in an interleaving block. Each red pixel represents an index to an VPL, a brighter red is a higher index. White pixels contain no data. The first value in each partition is the number of lights in that partition, therefore the dark line in front of the partitions.}
     \label{fig:impl:light_lists}
 \end{figure}
 
-As a simplified example, suppose that only four lights are used and the interleaving block size is 2x1, i.\,e.\ contains only two pixels. As described in the interleaved shading algorithm, in this case the first pixel will process the first half of its light list, while the second pixel will process the second half of its respective light list. If the first pixel's light list contains lights 3 and 4, while the other pixel is in a different cluster whose light list contains lights 2 and 3, both lights will end up processing only light 3. As a result, one light will have been accounted for twice, while two other lights have not been considered at all. This was visible as darkened or brightened lines along the screen-space tiles used by the clustered shading algorithm. The partitioning scheme completely fixes this by guaranteeing that the first pixel always processes light 1 and 2, while the second pixel always processes light 3 and 4, minus culling results respectively.
+As a simplified example, suppose that only four lights are used and the interleaving block size is 2x1, i.\,e., contains only two pixels. As described in the interleaved shading algorithm, in this case the first pixel will process the first half of its light list, while the second pixel will process the second half of its respective light list. If the first pixel's light list contains lights 3 and 4, while the other pixel is in a different cluster whose light list contains lights 2 and 3, both lights will end up processing only light 3. As a result, one light will have been accounted for twice, while two other lights have not been considered at all. This was visible as darkened or brightened lines along the screen-space tiles used by the clustered shading algorithm. The partitioning scheme completely fixes this by guaranteeing that the first pixel always processes light 1 and 2, while the second pixel always processes light 3 and 4, minus culling results respectively.
 
 While the partitions cannot reasonably be shrinked much, one could use estimates on how much depth slices per tile are used to reduce the memory consumption. Since the list of used clusters is stored in a compacted list as discussed previously, individual tiles can still use more depth slices than anticipated and not break the algorithm. An average of 4 out of 16 depth slices is likely enough for most scenes and would cut down the memory consumption of the light list texture by three thirds. To provide a reference: Since each partition contains only 64 lights, 8-bit indices are sufficient. The light list of each cluster thus needs 1\,KB. For a full HD resolution and screen-space tiles of 128\,px, the maximum number of clusters is 2160, so a little over 2\,MB of memory is used. Using the discussed estimate of 4 used clusters per tile, this can be cut down to 540\,KB.
 
@@ -194,6 +194,6 @@ The final gathering shader processes one pixel per invocation. Without clustered
 
 In addition to clustered deferred shading, we also implemented its predecessor tiled shading. Since it does not perform clustering in the z-dimension (or in other words, it uses only one depth slice per tile), it allows for a simpler implementation.
 
-We integrated tiled shading directly into the final gathering shader. As a reminder, during final gathering each work group processes those pixels from several interleaving blocks that use the same partition of the light list, e.\,g.\ every first pixel of 8x8 interleaving blocks, and each invocation processes one pixel. With tiled shading, each pixel's z-value is used to build a minimum and maximum z-value for this tile, again using atomic operations. In a second step, each invocation processes one VPL and culls it against the bounding box of the pixels, which is defined by the pixel's minimum and maximum fragment coordinates and z-values determined in the previous step. All lights that pass the culling test are added to a light list in a shared array, again using atomic counters to ensure no gaps are produced and no light is overwritten. Subsequently, final gathering is performed as usual with the difference of using the light list in the shared array instead of a light list computed in a previous shader pass.
+We integrated tiled shading directly into the final gathering shader. As a reminder, during final gathering each work group processes those pixels from several interleaving blocks that use the same partition of the light list, e.\,g., every first pixel of 8x8 interleaving blocks, and each invocation processes one pixel. With tiled shading, each pixel's z-value is used to build a minimum and maximum z-value for this tile, again using atomic operations. In a second step, each invocation processes one VPL and culls it against the bounding box of the pixels, which is defined by the pixel's minimum and maximum fragment coordinates and z-values determined in the previous step. All lights that pass the culling test are added to a light list in a shared array, again using atomic counters to ensure no gaps are produced and no light is overwritten. Subsequently, final gathering is performed as usual with the difference of using the light list in the shared array instead of a light list computed in a previous shader pass.
 
 Similar to the integrated interleaved shading algorithm, this implementation has several benefits. Again the implementation complexity is reduced, since no additional shader passes and no additional buffers with corresponding data layout considerations are needed. Second, no additional storage is needed, and third, this implementation, although simpler, turned out to be faster than the clustered deferred shading. See \Cref{sec:results:clusteredShading} for details.
